--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Variables de entorno para desarrollo
-VITE_API_URL=http://localhost:8000/api
+VITE_API_URL=http://127.0.0.1:8000/api
 VITE_APP_NAME=HACKADISC Frontend
 VITE_APP_ENV=development
 
