fix: lading page ganadora del hackadisc

--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
-# Variables de entorno para desarrollo
+# Configuración local - Dashboard de Análisis de Ventas y Pagos
 VITE_API_URL=http://127.0.0.1:8000/api
-VITE_APP_NAME=HACKADISC Frontend
+VITE_APP_NAME=HACKADISC Dashboard
 VITE_APP_ENV=development
+VITE_DEBUG_API=true
 
-# Si tu Laravel backend está en un puerto diferente, ajusta aquí:
-# VITE_API_URL=http://localhost:8080/api
+# Si tu API está en un puerto diferente, ajusta aquí:
+# VITE_API_URL=http://localhost:3000/api
