--- a/env.example
+++ b/env.example
@@ -1,7 +1,17 @@
-# Variables de entorno para desarrollo
+# Configuración de la API del Dashboard de Análisis de Ventas y Pagos
 VITE_API_URL=http://localhost:8000/api
-VITE_APP_NAME=HACKADISC Frontend
+VITE_APP_NAME=HACKADISC Dashboard
 VITE_APP_ENV=development
 
-# Si tu Laravel backend está en un puerto diferente, ajusta aquí:
-# VITE_API_URL=http://localhost:8080/api
+# Token de autenticación (si es necesario)
+VITE_API_TOKEN=
+
+# Configuración de debug
+VITE_DEBUG_API=true
+
+# URLs adicionales si hay microservicios
+VITE_CAPI_API_URL=http://localhost:8001/api
+
+# Si tu API está en un puerto diferente, ajusta aquí:
+# VITE_API_URL=http://localhost:3000/api
+# VITE_API_URL=https://tu-api-produccion.com/api
