--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 # Configuración de la API del Dashboard de Análisis de Ventas y Pagos
 VITE_API_URL=http://localhost:8000/api
+VITE_API_PRODUCTION_URL=https://tu-api-railway.up.railway.app/api
 VITE_APP_NAME=HACKADISC Dashboard
 VITE_APP_ENV=development
 
