--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Configuración local - Dashboard de Análisis de Ventas y Pagos
 VITE_API_URL=http://127.0.0.1:8000/api
+VITE_API_PRODUCTION_URL=https://hackadisc-backend-production.up.railway.app/api
 VITE_APP_NAME=HACKADISC Dashboard
 VITE_APP_ENV=development
 VITE_DEBUG_API=true
